feat: add account handler
