# api/dto/error_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+// ErrorResponse represents an error response
+type ErrorResponse struct {
+	Error string `json:"error" example:"error message"`
+}
